Task2: Solution - added new child component 'show-address'

--- a/Communicating-with-Child-Components/app/event-details.component.html
+++ b/Communicating-with-Child-Components/app/event-details.component.html
@@ -9,6 +9,6 @@
     Time: {{event.time}}
   </div>
   <div>
-    Address: {{event.location.address}}, {{event.location.city}}, {{event.location.country}}
+    Address: <show-address [address]="event.location"></show-address>
   </div>
 </div>
