Task5: Solution - added new div - container, styled it with display: flex, and added class right to div with data and gave to it margin-left: 10 px

--- a/Styling-Components/app/event-details.component.html
+++ b/Styling-Components/app/event-details.component.html
@@ -1,29 +1,31 @@
-<div>
-  <div style="margin-top:30px;">
-    Event:
-  </div>
-  <div>
-    Date:
-  </div>
-  <div>
-    Time:
-  </div>
-  <div>
-    Address:
-  </div>
-</div>
+<div class="container">
+    <div>
+        <div style="margin-top:30px;">
+            Event:
+        </div>
+        <div>
+            Date:
+        </div>
+        <div>
+            Time:
+        </div>
+        <div>
+            Address:
+        </div>
+    </div>
 
-<div>
-  <div style="margin-top:30px;">
-    {{event.name}} 
-  </div>
-  <div>
-    {{event.date}}
-  </div>
-  <div>
-    {{event.time}}
-  </div>
-  <div>
-    {{event.location.address}}, {{event.location.city}}, {{event.location.country}}
-  </div>
+    <div class="right">
+        <div style="margin-top:30px;">
+            {{event.name}}
+        </div>
+        <div>
+            {{event.date}}
+        </div>
+        <div>
+            {{event.time}}
+        </div>
+        <div>
+            {{event.location.address}}, {{event.location.city}}, {{event.location.country}}
+        </div>
+    </div>
 </div>
