Task6: Solution - added ngFor to the <tr> element and binded properties on each event

--- a/Repeating-Data-with-ngFor/app/events-list.component.html
+++ b/Repeating-Data-with-ngFor/app/events-list.component.html
@@ -11,11 +11,11 @@
       </tr>
     </thead>
     <tbody>
-      <tr>
-        <td> </td>
-        <td> </td>      
-        <td> </td>
-        <td> </td>
+      <tr *ngFor="let event of events">
+        <td>{{event.name}} </td>
+        <td>{{event.date}} </td>
+        <td>{{event.time}} </td>
+        <td>{{event.location.address}}, {{event.location.city}}, {{event.location.country}}</td>
       </tr>
     </tbody>
   </table>
