Task11: Solution - used ngClass to give different colors to titles

--- a/Adding-Style-with-ngClass/app/events-list.component.html
+++ b/Adding-Style-with-ngClass/app/events-list.component.html
@@ -3,7 +3,7 @@
     <span class="in-person">In Person</span> <span class="online">Online</span> <span class="tbd">TBD</span>
   </div>
   <div *ngFor="let event of events" class="well hoverwell thumbnail">
-    <h2>{{event.name}}</h2>
+    <h2 [ngClass]="getColor(event.format)">{{event.name}}</h2>
     <div>Date: {{event.date}}</div>
     <div>Time: {{event.time}}</div>
     <div *ngIf="event.location">
