--- a/Adding-Style-with-ngStyle/app/events-list.component.html
+++ b/Adding-Style-with-ngStyle/app/events-list.component.html
@@ -3,7 +3,7 @@
     <span style="color:green">In Person</span> <span style="color:red">Online</span> <span style="color:#aaa">TBD</span>
   </div>
   <div *ngFor="let event of events" class="well hoverwell thumbnail">
-    <h2>{{event.name}}</h2>
+    <h2 [ngStyle]="addStyle(event.format)">{{event.name}}</h2>
     <div>Date: {{event.date}}</div>
     <div>Time: {{event.time}}</div>
     <div *ngIf="event.location">
