--- a/Creating-a-Template-based-Form/src/app/create-event.component.html
+++ b/Creating-a-Template-based-Form/src/app/create-event.component.html
@@ -1,30 +1,31 @@
 <div>
-    <form>
+    <form #createForm='ngForm' (ngSubmit)="save(createForm.value)">
         <div class="form-group">
             <label for="name">Event Name: </label>
-            <input id="name" type="text"/>
+            <input [(ngModel)]="name" name="name" id="name" type="text"/>
         </div>
         <div class="form-group">
-            <label for="event-name">Date: </label>
-            <input id="date" type="text"/>
+            <label for="date">Date: </label>
+            <input [(ngModel)]="date" name="date" id="date" type="text"/>
         </div>
         <div class="form-group">
-            <label for="event-name">Time: </label>
-            <input id="time" type="text"/>
+            <label for="time">Time: </label>
+            <input [(ngModel)]="time" name="time" id="time" type="text"/>
+        </div>
+        <div ngModelGroup="location">
+        <div class="form-group">
+            <label for="address">Address: </label>
+            <input [(ngModel)]="address" name="address" id="address" type="text"/>
         </div>
         <div class="form-group">
-            <label for="event-name">Address: </label>
-            <input id="address" type="text"/>
+            <label for="city">City: </label>
+            <input [(ngModel)]="city" name="city" id="city" type="text"/>
         </div>
         <div class="form-group">
-            <label for="event-name">City: </label>
-            <input id="city" type="text"/>
+            <label for="country">Country: </label>
+            <input [(ngModel)]="country" name="country" id="country" type="text"/>
         </div>
-        <div class="form-group">
-            <label for="event-name">Country: </label>
-            <input id="country" type="text"/>
         </div>
-
         <button type="submit" class="btn btn-primary">Save</button>
         <button type="button" class="btn btn-default" (click)="cancel()">Cancel</button>
     </form>
