--- a/Creating-a-Reactive-Form/src/app/create-event.component.html
+++ b/Creating-a-Reactive-Form/src/app/create-event.component.html
@@ -1,29 +1,29 @@
 <div>
-    <form>
+    <form [formGroup]="createForm" (ngSubmit)="save(createForm.value)">
         <div class="form-group">
             <label for="name">Event Name: </label>
-            <input id="name" type="text"/>
+            <input formControlName="name" id="name" type="text"/>
         </div>
         <div class="form-group">
             <label for="date">Date: </label>
-            <input id="date" type="text"/>
+            <input formControlName="date" id="date" type="text"/>
         </div>
         <div class="form-group">
             <label for="time">Time: </label>
-            <input id="time" type="text"/>
+            <input formControlName="time" id="time" type="text"/>
         </div>
-        <div ngModelGroup="location">
+        <div formGroupName="location">
         <div class="form-group">
             <label for="address">Address: </label>
-            <input id="address" type="text"/>
+            <input formControlName="address" id="address" type="text"/>
         </div>
         <div class="form-group">
             <label for="city">City: </label>
-            <input id="city" type="text"/>
+            <input formControlName="city" id="city" type="text"/>
         </div>
         <div class="form-group">
             <label for="country">Country: </label>
-            <input id="country" type="text"/>
+            <input formControlName="country" id="country" type="text"/>
         </div>
         </div>
         <button type="submit" class="btn btn-primary">Save</button>
