--- a/Creating-a-Custom-Validator/src/app/create-event.component.html
+++ b/Creating-a-Custom-Validator/src/app/create-event.component.html
@@ -1,14 +1,15 @@
 <div>
     <form [formGroup]="createForm" (ngSubmit)="save(createForm.value)">
-        <div class="form-group" [ngClass]="{'error': name?.invalid && name?.touched}">
+        <div class="form-group" [ngClass]="{'error': name?.invalid && name?.dirty}">
             <label for="name">Event Name: </label>
             <input formControlName="name" id="name" type="text"/>
             <em *ngIf="name?.invalid && name?.touched">Required</em>
         </div>
-        <div class="form-group" [ngClass]="{'error': date?.invalid && date?.touched}">
+        <div class="form-group" [ngClass]="{'error': date?.invalid && date?.dirty}">
             <label for="date">Date: </label>
             <input formControlName="date" id="date" type="text"/>
-            <em *ngIf="date?.invalid && date?.touched">Required</em>
+            <em *ngIf="date?.invalid && date?.errors.requireWeekday && date?.dirty">{{date?.errors.requireWeekday}}</em>
+            <em *ngIf="date?.invalid && date?.dirty && date?.errors.required">Required</em>
         </div>
         <div class="form-group" [ngClass]="{'error': time?.invalid && time?.touched}">
             <label for="time">Time: </label>
